[Navigation] Bug fix. Added tags/categories.

--- a/_posts/feature/2023-09-04-sift.md
+++ b/_posts/feature/2023-09-04-sift.md
@@ -1,13 +1,10 @@
 ---
 title: "SIFT Algorithm"
 excerpt: "Feature Detector 알고리즘 중 하나인 SIFT(Scale-Invariant Feature Transform)에 대해 살펴본다."
-category: computer_vision
-# excerpt: "Github에 공개되어있는 대표적인 Face Parsing 실험 및 비교"
+category: computer vision
 
-# categories:
-#  - CV
 tags:
-  - vision
+  - computer vision 
 search: true
 
 # 목차
